# Python_Algorithms

./: README.md  pyproject.toml
Main/: binary_search.py
Math/: exponent.py  float.py  schulze.py  test_schulze.py
Simple/: dry_1.py  main.py  main.sublime-project  main.sublime-workspace
Simple/tools/: script_1.py  script_2.py
david_beazley/base_entire/: lists.py  portfolio.csv  test.txt  tuples.py
grokking_algorithms/: binary_search.py  deistra.py  deque.py  massive_sort.py  recursion.py  sieve_eratosthenes.py  simple_numbers.py
tinkoff/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
yandex/: A.cpp  ask.py  autocompetition.py  game_platformer.py  help.txt  intersecting_segment.py  is.c  lexiographical_order.py  lizards_life.py  researcher.py  text_format.py
yandex/2025/: A.js  B.js  C.js  D.js  E.js
yandex/test/: A_B.py  File_A_B.py  Stones.py  Sys_A_B.py  input.txt
